@startuml

title __HANDLERTHREAD's Class Diagram__\n

  namespace com.itbird {
    namespace handlerThread {
      class com.itbird.handlerThread.DownloadImageService {
          {static} + DOWNLOAD_URL : String
          {static} + INDEX_FLAG : String
          {static} + updateUI : UpdateUI
          {static} - TAG : String
          + DownloadImageService()
          + onBind()
          + onCreate()
          + onDestroy()
          + onStart()
          + onStartCommand()
          + setUpdateUI()
          # onHandleIntent()
          - downloadUrlBitmap()
      }
    }
  }
  

  namespace com.itbird {
    namespace handlerThread {
      interface com.itbird.handlerThread.DownloadImageService.UpdateUI {
          {abstract} + updateUI()
      }
    }
  }
  

  namespace com.itbird {
    namespace handlerThread {
      class com.itbird.handlerThread.HandlerThreadTestActivity {
          - MSG_DOWNLOAD_IMAGE_SUCCESS : int
          - mImageView : ImageView
          - mUIHandler : Handler
          - url : String[]
          # onCreate()
          - downloadUrlBitmap()
      }
    }
  }
  

  namespace com.itbird {
    namespace handlerThread {
      class com.itbird.handlerThread.IntentServiceTestActivity {
          {static} + MSG_DOWNLOAD_IMAGE_SUCCESS : int
          ~ mStartServiceintent : Intent
          - mImageView : ImageView
          - mUIHandler : Handler
          - url : String[]
          # onCreate()
          # onDestroy()
          - downloadUrlBitmap()
      }
    }
  }
  

  com.itbird.handlerThread.DownloadImageService -up-|> android.app.IntentService
  com.itbird.handlerThread.DownloadImageService +-down- com.itbird.handlerThread.DownloadImageService.UpdateUI
  com.itbird.handlerThread.HandlerThreadTestActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.itbird.handlerThread.IntentServiceTestActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
